apps/sashimi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sashimi
spec:
  ports:
    - port: 80
      targetPort: 8000
