apps/sashimi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sashimi
spec:
  rules:
    - host: sambunhi.nycu.one
      http:
        paths:
          - path: /
            backend:
              service:
                name: sambunhi
                port:
                  number: 80
            pathType: Prefix
